--- a/Shadow Assault Force/Assembly-CSharp.Player.csproj
+++ b/Shadow Assault Force/Assembly-CSharp.Player.csproj
@@ -62,18 +62,21 @@
   <ItemGroup>
     <Compile Include="Assets\Joystick Pack\Scripts\Joysticks\FixedJoystick.cs" />
     <Compile Include="Assets\DizzyMedia\_Assets\LP Sets_Sci-fi Interior\Scripts\Helpers\DoorCont.cs" />
+    <Compile Include="Assets\Scripts\EnemyWeapon.cs" />
     <Compile Include="Assets\DizzyMedia\_Assets\LP Sets_Sci-fi Interior\Scripts\Helpers\TransInd.cs" />
     <Compile Include="Assets\Low Poly Flat Sci Fi Assets\Demo\Scripts\DoubleSlidingDoorController.cs" />
     <Compile Include="Assets\Joystick Pack\Scripts\Joysticks\VariableJoystick.cs" />
+    <Compile Include="Assets\Scripts\PlayerWeapon.cs" />
     <Compile Include="Assets\Low Poly Flat Sci Fi Assets\Demo\Scripts\FlickeringLight.cs" />
     <Compile Include="Assets\Scripts\EnemyController.cs" />
     <Compile Include="Assets\Joystick Pack\Examples\JoystickSetterExample.cs" />
+    <Compile Include="Assets\Scripts\Grabber.cs" />
     <Compile Include="Assets\Scripts\Bullet.cs" />
+    <Compile Include="Assets\Scripts\BigAnkleGrabber.cs" />
     <Compile Include="Assets\Scripts\LevelManager.cs" />
     <Compile Include="Assets\Scripts\LevelGenerator.cs" />
     <Compile Include="Assets\DizzyMedia\_Assets\LP Sets_Sci-fi Interior\Scripts\Helpers\ExtendedFlycam.cs" />
     <Compile Include="Assets\Scripts\BulletSpawner.cs" />
-    <Compile Include="Assets\Scripts\Weapon.cs" />
     <Compile Include="Assets\Joystick Pack\Scripts\Joysticks\FloatingJoystick.cs" />
     <Compile Include="Assets\Scripts\LevelEnd.cs" />
     <Compile Include="Assets\Joystick Pack\Scripts\Joysticks\DynamicJoystick.cs" />
