--- a/Shadow Assault Force/Assembly-CSharp.csproj
+++ b/Shadow Assault Force/Assembly-CSharp.csproj
@@ -68,14 +68,18 @@
     <Compile Include="Assets\Joystick Pack\Scripts\Joysticks\VariableJoystick.cs" />
     <Compile Include="Assets\Scripts\Coins.cs" />
     <Compile Include="Assets\Low Poly Flat Sci Fi Assets\Demo\Scripts\FlickeringLight.cs" />
+    <Compile Include="Assets\Scripts\Grenade.cs" />
     <Compile Include="Assets\Scripts\Enemies\BossGrabberController.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerController.cs" />
     <Compile Include="Assets\Joystick Pack\Examples\JoystickSetterExample.cs" />
+    <Compile Include="Assets\Scripts\DebugDraw.cs" />
     <Compile Include="Assets\Scripts\Bullet.cs" />
     <Compile Include="Assets\Scripts\Enemies\Grabber.cs" />
+    <Compile Include="Assets\Scripts\Enemies\EnemyGrenadeController.cs" />
     <Compile Include="Assets\Scripts\Enemies\LittelGrabberController.cs" />
     <Compile Include="Assets\Scripts\MainScreen\MainManager.cs" />
     <Compile Include="Assets\Scripts\Enemies\BigAnkleGrabber.cs" />
+    <Compile Include="Assets\Scripts\Enemies\EnemyWeaponGrenade.cs" />
     <Compile Include="Assets\DizzyMedia\_Assets\LP Sets_Sci-fi Interior\Scripts\Helpers\ExtendedFlycam.cs" />
     <Compile Include="Assets\Scripts\Level\DoorCont.cs" />
     <Compile Include="Assets\Scripts\Level\LevelManager.cs" />
