--- a/Shadow Assault Force/Assembly-CSharp.Player.csproj
+++ b/Shadow Assault Force/Assembly-CSharp.Player.csproj
@@ -72,21 +72,21 @@
     <Compile Include="Assets\Scripts\Enemies\BossGrabberController.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerController.cs" />
     <Compile Include="Assets\Joystick Pack\Examples\JoystickSetterExample.cs" />
-    <Compile Include="Assets\Scripts\DebugDraw.cs" />
     <Compile Include="Assets\Scripts\Bullet.cs" />
-    <Compile Include="Assets\Scripts\Enemies\Grabber.cs" />
     <Compile Include="Assets\Scripts\Enemies\EnemyGrenadeController.cs" />
     <Compile Include="Assets\Scripts\Enemies\LittelGrabberController.cs" />
     <Compile Include="Assets\Scripts\MainScreen\MainManager.cs" />
     <Compile Include="Assets\Scripts\Enemies\BigAnkleGrabber.cs" />
     <Compile Include="Assets\Scripts\Enemies\EnemyWeaponGrenade.cs" />
     <Compile Include="Assets\DizzyMedia\_Assets\LP Sets_Sci-fi Interior\Scripts\Helpers\ExtendedFlycam.cs" />
+    <Compile Include="Assets\Scripts\GrenageLuncherBarrel.cs" />
     <Compile Include="Assets\Scripts\Level\DoorCont.cs" />
     <Compile Include="Assets\Scripts\Level\LevelManager.cs" />
     <Compile Include="Assets\Scripts\BulletSpawner.cs" />
     <Compile Include="Assets\Scripts\Meta.cs" />
     <Compile Include="Assets\Joystick Pack\Scripts\Joysticks\FloatingJoystick.cs" />
     <Compile Include="Assets\Joystick Pack\Scripts\Joysticks\DynamicJoystick.cs" />
+    <Compile Include="Assets\Scripts\Barrel.cs" />
     <Compile Include="Assets\Scripts\Level\LevelGenerator.cs" />
     <Compile Include="Assets\Joystick Pack\Scripts\Base\Joystick.cs" />
     <Compile Include="Assets\Scripts\Enemies\EnemyWeapon.cs" />
