updated the upgrades

--- a/Shadow Assault Force/Assembly-CSharp.Player.csproj
+++ b/Shadow Assault Force/Assembly-CSharp.Player.csproj
@@ -60,68 +60,70 @@
     <Analyzer Include="C:\Program Files\Unity\Hub\Editor\2022.3.16f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.Properties.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Joystick Pack\Scripts\Joysticks\FixedJoystick.cs" />
-    <Compile Include="Assets\DizzyMedia\_Assets\LP Sets_Sci-fi Interior\Scripts\Helpers\TransInd.cs" />
+    <Compile Include="Assets\Imported Assets\Joystick Pack\Scripts\Base\Joystick.cs" />
+    <Compile Include="Assets\Imported Assets\Joystick Pack\Scripts\Joysticks\FixedJoystick.cs" />
     <Compile Include="Assets\Scripts\Enemies\EnemyController.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerWeapon.cs" />
-    <Compile Include="Assets\Low Poly Flat Sci Fi Assets\Demo\Scripts\DoubleSlidingDoorController.cs" />
-    <Compile Include="Assets\Joystick Pack\Scripts\Joysticks\VariableJoystick.cs" />
     <Compile Include="Assets\Scripts\Coins.cs" />
-    <Compile Include="Assets\Low Poly Flat Sci Fi Assets\Demo\Scripts\FlickeringLight.cs" />
     <Compile Include="Assets\Scripts\Grenade.cs" />
+    <Compile Include="Assets\Imported Assets\Joystick Pack\Scripts\Joysticks\VariableJoystick.cs" />
     <Compile Include="Assets\Scripts\Enemies\BossGrabberController.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerController.cs" />
-    <Compile Include="Assets\Joystick Pack\Examples\JoystickSetterExample.cs" />
+    <Compile Include="Assets\Imported Assets\Environment\Space Station Environment\Demo\Scripts\DoubleSlidingDoorController.cs" />
     <Compile Include="Assets\Scripts\Bullet.cs" />
     <Compile Include="Assets\Scripts\Enemies\EnemyGrenadeController.cs" />
     <Compile Include="Assets\Scripts\Enemies\LittelGrabberController.cs" />
     <Compile Include="Assets\Scripts\MainScreen\MainManager.cs" />
     <Compile Include="Assets\Scripts\Enemies\BigAnkleGrabber.cs" />
+    <Compile Include="Assets\Scripts\Upgrades\NewUpgradeSpawner.cs" />
     <Compile Include="Assets\Scripts\Enemies\EnemyWeaponGrenade.cs" />
-    <Compile Include="Assets\DizzyMedia\_Assets\LP Sets_Sci-fi Interior\Scripts\Helpers\ExtendedFlycam.cs" />
+    <Compile Include="Assets\Imported Assets\Joystick Pack\Examples\JoystickPlayerExample.cs" />
+    <Compile Include="Assets\Imported Assets\Environment\SpaceShip Environemnt\_Assets\LP Sets_Sci-fi Interior\Scripts\Helpers\ExtendedFlycam.cs" />
+    <Compile Include="Assets\Imported Assets\Environment\Space Station Environment\Demo\Scripts\FlickeringLight.cs" />
     <Compile Include="Assets\Scripts\GrenageLuncherBarrel.cs" />
     <Compile Include="Assets\Scripts\Level\DoorCont.cs" />
     <Compile Include="Assets\Scripts\Level\LevelManager.cs" />
     <Compile Include="Assets\Scripts\BulletSpawner.cs" />
     <Compile Include="Assets\Scripts\Meta.cs" />
-    <Compile Include="Assets\Joystick Pack\Scripts\Joysticks\FloatingJoystick.cs" />
-    <Compile Include="Assets\Joystick Pack\Scripts\Joysticks\DynamicJoystick.cs" />
     <Compile Include="Assets\Scripts\Barrel.cs" />
     <Compile Include="Assets\Scripts\Level\LevelGenerator.cs" />
-    <Compile Include="Assets\Joystick Pack\Scripts\Base\Joystick.cs" />
+    <Compile Include="Assets\Imported Assets\Models\Grabber Model\Assets\Scripts\AnkleGrabberExample.cs" />
     <Compile Include="Assets\Scripts\Enemies\EnemyWeapon.cs" />
     <Compile Include="Assets\Scripts\MainScreen\UIManager.cs" />
-    <Compile Include="Assets\Ghoul\Assets\Scripts\AnkleGrabberExample.cs" />
+    <Compile Include="Assets\Imported Assets\Joystick Pack\Scripts\Joysticks\FloatingJoystick.cs" />
     <Compile Include="Assets\Scripts\Upgrades\UpgradeItem.cs" />
+    <Compile Include="Assets\Imported Assets\Joystick Pack\Examples\JoystickSetterExample.cs" />
     <Compile Include="Assets\Scripts\Upgrades\UpgradeSpawner.cs" />
-    <Compile Include="Assets\Joystick Pack\Examples\JoystickPlayerExample.cs" />
     <Compile Include="Assets\Scripts\Level\LevelEnd.cs" />
     <Compile Include="Assets\Scripts\Level\LevelUIManager.cs" />
+    <Compile Include="Assets\Imported Assets\Joystick Pack\Scripts\Joysticks\DynamicJoystick.cs" />
+    <Compile Include="Assets\AudioManager.cs" />
+    <Compile Include="Assets\Imported Assets\Environment\SpaceShip Environemnt\_Assets\LP Sets_Sci-fi Interior\Scripts\Helpers\TransInd.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
-    <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
-    <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
-    <None Include="Assets\DizzyMedia\_Assets\LP Sets_Sci-fi Interior\Docs\Instructions.txt" />
-    <None Include="Assets\TextMesh Pro\Shaders\TMPro_Mobile.cginc" />
-    <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF SSD.shader" />
-    <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Surface-Mobile.shader" />
-    <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Surface.shader" />
-    <None Include="Assets\TextMesh Pro\Sprites\EmojiOne Attribution.txt" />
-    <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap-Custom-Atlas.shader" />
-    <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF.shader" />
-    <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile SSD.shader" />
-    <None Include="Assets\TextMesh Pro\Resources\LineBreaking Leading Characters.txt" />
-    <None Include="Assets\TextMesh Pro\Shaders\TMPro_Properties.cginc" />
-    <None Include="Assets\TextMesh Pro\Shaders\TMPro_Surface.cginc" />
-    <None Include="Assets\TextMesh Pro\Resources\LineBreaking Following Characters.txt" />
-    <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Masking.shader" />
-    <None Include="Assets\Low Poly Flat Sci Fi Assets\Documentation\readme.txt" />
-    <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF Overlay.shader" />
-    <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap-Mobile.shader" />
-    <None Include="Assets\TextMesh Pro\Fonts\LiberationSans - OFL.txt" />
-    <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile.shader" />
-    <None Include="Assets\TextMesh Pro\Shaders\TMP_Sprite.shader" />
+    <None Include="Assets\Imported Assets\TextMesh Pro\Shaders\TMPro.cginc" />
+    <None Include="Assets\Imported Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
+    <None Include="Assets\Imported Assets\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
+    <None Include="Assets\Imported Assets\Environment\SpaceShip Environemnt\_Assets\LP Sets_Sci-fi Interior\Docs\Instructions.txt" />
+    <None Include="Assets\Imported Assets\TextMesh Pro\Shaders\TMPro_Mobile.cginc" />
+    <None Include="Assets\Imported Assets\TextMesh Pro\Shaders\TMP_SDF SSD.shader" />
+    <None Include="Assets\Imported Assets\TextMesh Pro\Shaders\TMP_SDF-Surface-Mobile.shader" />
+    <None Include="Assets\Imported Assets\TextMesh Pro\Shaders\TMP_SDF-Surface.shader" />
+    <None Include="Assets\Imported Assets\TextMesh Pro\Sprites\EmojiOne Attribution.txt" />
+    <None Include="Assets\Imported Assets\TextMesh Pro\Shaders\TMP_Bitmap-Custom-Atlas.shader" />
+    <None Include="Assets\Imported Assets\TextMesh Pro\Shaders\TMP_SDF.shader" />
+    <None Include="Assets\Imported Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile SSD.shader" />
+    <None Include="Assets\Imported Assets\TextMesh Pro\Resources\LineBreaking Leading Characters.txt" />
+    <None Include="Assets\Imported Assets\TextMesh Pro\Shaders\TMPro_Properties.cginc" />
+    <None Include="Assets\Imported Assets\TextMesh Pro\Shaders\TMPro_Surface.cginc" />
+    <None Include="Assets\Imported Assets\TextMesh Pro\Resources\LineBreaking Following Characters.txt" />
+    <None Include="Assets\Imported Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Masking.shader" />
+    <None Include="Assets\Imported Assets\Environment\Space Station Environment\Documentation\readme.txt" />
+    <None Include="Assets\Imported Assets\TextMesh Pro\Shaders\TMP_SDF Overlay.shader" />
+    <None Include="Assets\Imported Assets\TextMesh Pro\Shaders\TMP_Bitmap-Mobile.shader" />
+    <None Include="Assets\Imported Assets\TextMesh Pro\Fonts\LiberationSans - OFL.txt" />
+    <None Include="Assets\Imported Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile.shader" />
+    <None Include="Assets\Imported Assets\TextMesh Pro\Shaders\TMP_Sprite.shader" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
