--- a/Shadow Assault Force/Assembly-CSharp.csproj
+++ b/Shadow Assault Force/Assembly-CSharp.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Assets\Scripts\Enemies\BossGrabberController.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerController.cs" />
     <Compile Include="Assets\Imported Assets\Environment\Space Station Environment\Demo\Scripts\DoubleSlidingDoorController.cs" />
+    <Compile Include="Assets\Scripts\Enemies\IEnemy.cs" />
     <Compile Include="Assets\Scripts\Bullet.cs" />
     <Compile Include="Assets\Scripts\Enemies\EnemyGrenadeController.cs" />
     <Compile Include="Assets\Scripts\Enemies\LittelGrabberController.cs" />
@@ -77,6 +78,7 @@
     <Compile Include="Assets\Scripts\Enemies\BigAnkleGrabber.cs" />
     <Compile Include="Assets\Scripts\Upgrades\NewUpgradeSpawner.cs" />
     <Compile Include="Assets\Scripts\Enemies\EnemyWeaponGrenade.cs" />
+    <Compile Include="Assets\Scripts\Enemies\EnemyShooterController.cs" />
     <Compile Include="Assets\Imported Assets\Joystick Pack\Examples\JoystickPlayerExample.cs" />
     <Compile Include="Assets\Imported Assets\Environment\SpaceShip Environemnt\_Assets\LP Sets_Sci-fi Interior\Scripts\Helpers\ExtendedFlycam.cs" />
     <Compile Include="Assets\Imported Assets\Environment\Space Station Environment\Demo\Scripts\FlickeringLight.cs" />
