--- a/Shadow Assault Force/Assembly-CSharp.Player.csproj
+++ b/Shadow Assault Force/Assembly-CSharp.Player.csproj
@@ -60,10 +60,13 @@
     <Analyzer Include="C:\Program Files\Unity\Hub\Editor\2022.3.16f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.Properties.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\URP\TutorialInfo\Scripts\Readme.cs" />
     <Compile Include="Assets\Imported Assets\Joystick Pack\Scripts\Base\Joystick.cs" />
     <Compile Include="Assets\Imported Assets\Joystick Pack\Scripts\Joysticks\FixedJoystick.cs" />
     <Compile Include="Assets\Scripts\Enemies\EnemyController.cs" />
+    <Compile Include="Assets\Scripts\Payload.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerWeapon.cs" />
+    <Compile Include="Assets\Scripts\Enemy.cs" />
     <Compile Include="Assets\Scripts\Coins.cs" />
     <Compile Include="Assets\Scripts\Grenade.cs" />
     <Compile Include="Assets\Imported Assets\Joystick Pack\Scripts\Joysticks\VariableJoystick.cs" />
@@ -78,11 +81,13 @@
     <Compile Include="Assets\Scripts\Enemies\BigAnkleGrabber.cs" />
     <Compile Include="Assets\Scripts\Upgrades\NewUpgradeSpawner.cs" />
     <Compile Include="Assets\Scripts\Enemies\EnemyWeaponGrenade.cs" />
+    <Compile Include="Assets\Scripts\PayloadWeapon.cs" />
     <Compile Include="Assets\Scripts\Enemies\EnemyShooterController.cs" />
     <Compile Include="Assets\Imported Assets\Joystick Pack\Examples\JoystickPlayerExample.cs" />
     <Compile Include="Assets\Imported Assets\Environment\SpaceShip Environemnt\_Assets\LP Sets_Sci-fi Interior\Scripts\Helpers\ExtendedFlycam.cs" />
     <Compile Include="Assets\Imported Assets\Environment\Space Station Environment\Demo\Scripts\FlickeringLight.cs" />
     <Compile Include="Assets\Scripts\GrenageLuncherBarrel.cs" />
+    <Compile Include="Assets\Scripts\NewPlayerController.cs" />
     <Compile Include="Assets\Scripts\Level\DoorCont.cs" />
     <Compile Include="Assets\Scripts\Level\LevelManager.cs" />
     <Compile Include="Assets\Scripts\BulletSpawner.cs" />
